--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,10 +7,33 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.demo.MainActivity" >
+    
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+      	<TableLayout android:id="@+id/tb1"
+      	    android:layout_width="fill_parent"
+      	    android:layout_height="wrap_content">
+      		<TableRow>
+			    <Button android:id="@+id/login"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="login"/>
+			    <Button android:id="@+id/ok2"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="login1"/>
+			    <Button android:id="@+id/ok3"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="login2"/>
+			    <Button android:id="@+id/ok4"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="login3"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+			</TableRow>
+		</TableLayout>
+    </LinearLayout>
 </RelativeLayout>
