--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,10 +20,10 @@
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:text="login"/>
-			    <Button android:id="@+id/ok2"
+			    <Button android:id="@+id/head"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
-			        android:text="login1"/>
+			        android:text="头像"/>
 			    <Button android:id="@+id/ok3"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
