--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical" 
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content">
-            <RelativeLayout 
+           <RelativeLayout 
                 android:orientation="vertical" 
                 android:paddingLeft="10.0dip" 
                 android:paddingTop="20.0dip" 
@@ -37,7 +37,15 @@
                     android:hint="用户名(邮箱)" 
                     android:singleLine="true" 
                     android:layout_centerVertical="true" />
-            </RelativeLayout>        
+             
+            </RelativeLayout>
+            <ImageView 
+      		android:layout_width="fill_parent"
+	        android:layout_height="1dp"
+	        android:layout_marginLeft="10.0dip" 
+            android:layout_marginRight="30.0dip" 
+	        android:background="#ffffff"
+			/>        
             <RelativeLayout 
                 android:orientation="vertical" 
 				android:paddingLeft="10.0dip" 
@@ -62,6 +70,13 @@
                     android:singleLine="true" 
                     android:layout_centerVertical="true" />
             </RelativeLayout>
+        <ImageView 
+      		android:layout_width="fill_parent"
+	        android:layout_height="1dp"
+	        android:layout_marginLeft="10.0dip" 
+            android:layout_marginRight="30.0dip" 
+	        android:background="#ffffff"
+		/>
         <RelativeLayout
             android:paddingLeft="25dp"
             android:paddingRight="25dp"
@@ -88,20 +103,20 @@
             <Button
                 android:id="@+id/login_login_btn"
                 android:layout_width="match_parent"
-                android:layout_height="50.0dp"
+                android:layout_height="40.0dp"
                 android:background="#ff0000"
                 android:gravity="center"
-                android:text="登      录"
+                android:text="登 录"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />      
             <Button
                 android:id="@+id/login_register_btn"
                 android:layout_width="match_parent"
-                android:layout_height="50.0dp"
+                android:layout_height="40.0dp"
                 android:layout_marginTop="20dp"
                 android:background="#ff0000"
                 android:gravity="center"
-                android:text="注      册"
+                android:text="注 册"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
         </LinearLayout>
